Another small fix on the nav on mobile

--- a/resources/css/gambling_styles.css
+++ b/resources/css/gambling_styles.css
@@ -86,12 +86,12 @@ p {
   font-family: "Montserrat", serif;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 500px) {
   html {
     font-size: 12px;
   }
   nav {
-    margin-left: -12%;
+    margin-left: -13%;
   }
   #gambling_image{
     width: 200px;
